# docsort-ai

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: classification_rules.yaml  settings.yaml
docs/: architecture.md  deployment.md
scripts/: generate_samples.py  train_model.py
src/: __init__.py
src/api/: __init__.py  server.py
src/classifiers/: __init__.py  base.py  hybrid.py  variant_a_rules.py  variant_b_ml.py  variant_c_neural.py  variant_d_llm.py
src/collectors/: __init__.py  base.py  email_collector.py  folder_watcher.py
src/core/: __init__.py  config.py  document.py  pipeline.py
src/feedback/: __init__.py  feedback_manager.py
src/ocr/: __init__.py  preprocessor.py  tesseract_engine.py
src/sorter/: __init__.py  file_sorter.py
src/ui/: __init__.py  streamlit_app.py
tests/: conftest.py  test_pipeline.py  test_variant_a.py  test_variant_b.py
