[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsort-ai"
version = "0.1.0"
description = "Система автоматической классификации и сортировки сканированных документов"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "pymupdf>=1.23.0",
    "scikit-learn>=1.3",
    "watchdog>=3.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "structlog>=23.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "pytest-cov>=4.1", "ruff>=0.1"]
neural = ["onnxruntime>=1.16", "sentence-transformers>=2.2"]
llm = ["httpx>=0.25"]
ui = ["streamlit>=1.28"]

[project.scripts]
docsort = "core.pipeline:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
